<resources>
    <string name="app_name">SPEED SELECTOR</string>
    <string name="name">S P E E D\nS E L E C T O R</string>
    <string name="subName">～ 瞬発力の限界を競え ～</string>

    <string name="start1">タイムモード\nスタート</string>
    <string name="start2">ポイントモード\nスタート</string>
    <string name="choice1">●</string>
    <string name="choice2">▲</string>
    <string name="choice3">×</string>
    <string name="restCount">残り回数</string>
    <string name="restTime">残り時間</string>
    <string name="scoreView">正解数:%d お手つき:%d</string>
    <string name="score">%.2f 秒 + %d ペナルティ * 10</string>
    <string name="scoreResult">スコア:%.2f 秒</string>

    <string name="score2">%d 正解 - %d ペナルティ </string>
    <string name="scoreResult2">スコア:%d ポイント</string>

    <string name="newScore">ハイスコア更新！</string>

    <string name="modeSelect">ゲームモードを選択</string>

    <string name="highScore">ハイスコア</string>
    <string name="scoreTime">タイムモード\n%.2f sec</string>
    <string name="scorePoint">ポイントモード\n%d ポイント</string>

    <!-- ナビゲーション用 -->
    <string name="menu1">遊び方</string>
    <string name="menu2">プライバシーポリシー</string>
    <string name="menu3">リセット</string>
    <string name="menu4">意見などはこちら</string>

    <!-- URL -->
    <string name="privacy_policy">https://www.gensounosakura.work/posts/5385817</string>
    <string name="enquete_url">https://goo.gl/forms/5nkpgZ3ykued2lCe2</string>

    <!-- 説明書用 -->
    <string name="readMeTitle1">＜説明＞</string>
    <string name="readMeTitle2">＜モード説明＞</string>
    <string name="readMeSubTitle1">タイムモード　▽</string>
    <string name="readMeSubTitle2">ポイントモード　▽</string>
    <string name="readMeMain1">表示される図と似た図形を選んでね！</string>

    <string name="readMeMain2">10個の問題を何秒でクリア出るかを競うモード！\nお手つき一回に付き＋10秒のペナルティ！！</string>
    <string name="readMeMain3">15秒でいくつ正解できるかを競うモード！\nお手つき一回に付き－1回のペナルティ！！</string>

    <string name="simpleReadMe1">モードの簡単な説明！</string>
    <string name="simpleReadMe2">ゲーム画面の説明！</string>

    <!-- 画面説明用 -->
    <string name="pointModeReadMe">①:残り時間\n②正解数と間違った回数:\n③:問題図形\n④:回答図形ボタン(3種類あるぞ！)\n\nこの場合は、●のボタンが正解！</string>
    <string name="scoreModeReadMe">①:残り回数\n②:問題図形\n③:回答図形ボタン(3種類あるぞ！)\n\nこの場合は、×のボタンが正解！</string>
    <string name="readme_jump">遊び方はこちら</string>

    <!-- ポイントアタック用 -->
</resources>
