<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/readMeBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/readMeTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_high_score"
                android:text="@string/readMeTitle1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readMeMain1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readMeMain1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spaceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/readMeTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_high_score"
                android:text="@string/readMeTitle2"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <Button
                android:id="@+id/scoreModeReadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button"
                android:text="@string/readMeSubTitle1" />

            <LinearLayout
                android:id="@+id/scoreModeReadList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scoreModeReadText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleReadMe1"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreModeReadText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/readMeMain2"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12sp" />

                <TextView
                    android:id="@+id/scoreModeReadText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleReadMe2"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/scoremode_image" />

                <TextView
                    android:id="@+id/scoreModeReadText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scoreModeReadMe"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <Button
                android:id="@+id/pointModeReadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button"
                android:text="@string/readMeSubTitle2"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/pointModeReadList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pointModeReadText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleReadMe1"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pointModeReadText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/readMeMain3"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12sp" />

                <TextView
                    android:id="@+id/pointModeReadText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleReadMe2"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/pointmode_image" />

                <TextView
                    android:id="@+id/pointModeReadText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pointModeReadMe"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />
            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/readMeBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/style_button"
        android:text="戻る"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>